// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editSongForm.vue > edits a single song 1`] = `
<form data-v-cf47e900="" class="form">
  <header data-v-cf47e900="" class="gap-4"><img data-v-cf47e900="" src="http://test/album.jpg" alt="" class="w-[84px] aspect-square object-cover object-center rounded-md">
    <div data-v-cf47e900="" class="flex-1 flex flex-col justify-center overflow-hidden">
      <h1 data-v-cf47e900="" class="">Rocket to Heaven</h1>
      <h2 data-v-cf47e900="" class="" data-testid="displayed-artist-name">Led Zeppelin</h2>
      <h2 data-v-cf47e900="" class="" data-testid="displayed-album-name">IV</h2>
    </div>
  </header>
  <div data-v-64fb00eb="" data-v-cf47e900="" class="secondary m3-tabs tabs" role="tablist"><button data-v-64fb00eb="" aria-selected="true" class="active tab m3-state m3-title-small" role="tab" type="button"><span data-v-64fb00eb="" class="inner"><!--v-if--><span data-v-64fb00eb="">Details</span><span data-v-64fb00eb="" class="indicator"></span></span></button><button data-v-64fb00eb="" aria-selected="false" class="tab m3-state m3-title-small" role="tab" type="button"><span data-v-64fb00eb="" class="inner"><!--v-if--><span data-v-64fb00eb="">Lyrics</span>
      <!--v-if--></span>
    </button></div>
  <main data-v-cf47e900="" class="pt-4">
    <div data-v-cf47e900="" class="flex flex-col gap-4"><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Title" data-testid="title-input" name="title" placeholder=" " type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Title</span></legend>
        </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Title</span></span>
        <!--v-if-->
      </label>
      <div data-v-cf47e900="" class="grid md:grid-cols-2 gap-4"><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Artist" data-testid="artist-input" name="artist" placeholder=" " type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Artist</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Artist</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Album artist" data-testid="albumArtist-input" name="album_artist" placeholder=" " type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Album artist</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Album artist</span></span>
          <!--v-if-->
        </label></div><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Album" data-testid="album-input" name="album" placeholder=" " type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Album</span></legend>
        </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Album</span></span>
        <!--v-if-->
      </label>
      <div data-v-cf47e900="" class="grid grid-cols-2 md:grid-cols-4 gap-4"><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Track" data-testid="track-input" min="1" name="track" placeholder=" " type="number" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Track</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Track</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Disc" data-testid="disc-input" min="1" name="disc" placeholder=" " type="number" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Disc</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Disc</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Genre" data-testid="genre-input" list="genres" name="genre" placeholder=" " type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Genre</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Genre</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Year" data-testid="year-input" name="year" placeholder=" " type="number" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Year</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Year</span></span>
          <!--v-if-->
        </label></div><datalist data-v-cf47e900="" id="genres">
        <option data-v-cf47e900="" value="Blues"></option>
        <option data-v-cf47e900="" value="Classic Rock"></option>
        <option data-v-cf47e900="" value="Country"></option>
        <option data-v-cf47e900="" value="Dance"></option>
        <option data-v-cf47e900="" value="Disco"></option>
        <option data-v-cf47e900="" value="Funk"></option>
        <option data-v-cf47e900="" value="Grunge"></option>
        <option data-v-cf47e900="" value="Hip-Hop"></option>
        <option data-v-cf47e900="" value="Jazz"></option>
        <option data-v-cf47e900="" value="Metal"></option>
        <option data-v-cf47e900="" value="New Age"></option>
        <option data-v-cf47e900="" value="Oldies"></option>
        <option data-v-cf47e900="" value="Other"></option>
        <option data-v-cf47e900="" value="Pop"></option>
        <option data-v-cf47e900="" value="R&amp;B"></option>
        <option data-v-cf47e900="" value="Rap"></option>
        <option data-v-cf47e900="" value="Reggae"></option>
        <option data-v-cf47e900="" value="Rock"></option>
        <option data-v-cf47e900="" value="Techno"></option>
        <option data-v-cf47e900="" value="Industrial"></option>
        <option data-v-cf47e900="" value="Alternative"></option>
        <option data-v-cf47e900="" value="Ska"></option>
        <option data-v-cf47e900="" value="Death Metal"></option>
        <option data-v-cf47e900="" value="Pranks"></option>
        <option data-v-cf47e900="" value="Soundtrack"></option>
        <option data-v-cf47e900="" value="Euro-Techno"></option>
        <option data-v-cf47e900="" value="Ambient"></option>
        <option data-v-cf47e900="" value="Trip-Hop"></option>
        <option data-v-cf47e900="" value="Vocal"></option>
        <option data-v-cf47e900="" value="Jazz &amp; Funk"></option>
        <option data-v-cf47e900="" value="Fusion"></option>
        <option data-v-cf47e900="" value="Trance"></option>
        <option data-v-cf47e900="" value="Classical"></option>
        <option data-v-cf47e900="" value="Instrumental"></option>
        <option data-v-cf47e900="" value="Acid"></option>
        <option data-v-cf47e900="" value="House"></option>
        <option data-v-cf47e900="" value="Game"></option>
        <option data-v-cf47e900="" value="Sound Clip"></option>
        <option data-v-cf47e900="" value="Gospel"></option>
        <option data-v-cf47e900="" value="Noise"></option>
        <option data-v-cf47e900="" value="Alternative Rock"></option>
        <option data-v-cf47e900="" value="Bass"></option>
        <option data-v-cf47e900="" value="Punk"></option>
        <option data-v-cf47e900="" value="Space"></option>
        <option data-v-cf47e900="" value="Meditative"></option>
        <option data-v-cf47e900="" value="Instrumental Pop"></option>
        <option data-v-cf47e900="" value="Instrumental Rock"></option>
        <option data-v-cf47e900="" value="Ethnic"></option>
        <option data-v-cf47e900="" value="Gothic"></option>
        <option data-v-cf47e900="" value="Darkwave"></option>
        <option data-v-cf47e900="" value="Techno-Industrial"></option>
        <option data-v-cf47e900="" value="Electronic"></option>
        <option data-v-cf47e900="" value="Pop-Folk"></option>
        <option data-v-cf47e900="" value="Eurodance"></option>
        <option data-v-cf47e900="" value="Dream"></option>
        <option data-v-cf47e900="" value="Southern Rock"></option>
        <option data-v-cf47e900="" value="Comedy"></option>
        <option data-v-cf47e900="" value="Cult"></option>
        <option data-v-cf47e900="" value="Gangsta"></option>
        <option data-v-cf47e900="" value="Top 40"></option>
        <option data-v-cf47e900="" value="Christian Rap"></option>
        <option data-v-cf47e900="" value="Pop/Funk"></option>
        <option data-v-cf47e900="" value="Jungle"></option>
        <option data-v-cf47e900="" value="Native US"></option>
        <option data-v-cf47e900="" value="Cabaret"></option>
        <option data-v-cf47e900="" value="New Wave"></option>
        <option data-v-cf47e900="" value="Psychedelic"></option>
        <option data-v-cf47e900="" value="Rave"></option>
        <option data-v-cf47e900="" value="Showtunes"></option>
        <option data-v-cf47e900="" value="Trailer"></option>
        <option data-v-cf47e900="" value="Lo-Fi"></option>
        <option data-v-cf47e900="" value="Tribal"></option>
        <option data-v-cf47e900="" value="Acid Punk"></option>
        <option data-v-cf47e900="" value="Acid Jazz"></option>
        <option data-v-cf47e900="" value="Polka"></option>
        <option data-v-cf47e900="" value="Retro"></option>
        <option data-v-cf47e900="" value="Musical"></option>
        <option data-v-cf47e900="" value="Rock &amp; Roll"></option>
        <option data-v-cf47e900="" value="Hard Rock"></option>
        <option data-v-cf47e900="" value="Folk"></option>
        <option data-v-cf47e900="" value="Folk-Rock"></option>
        <option data-v-cf47e900="" value="National Folk"></option>
        <option data-v-cf47e900="" value="Swing"></option>
        <option data-v-cf47e900="" value="Fast Fusion"></option>
        <option data-v-cf47e900="" value="Bebob"></option>
        <option data-v-cf47e900="" value="Latin"></option>
        <option data-v-cf47e900="" value="Revival"></option>
        <option data-v-cf47e900="" value="Celtic"></option>
        <option data-v-cf47e900="" value="Bluegrass"></option>
        <option data-v-cf47e900="" value="Avantgarde"></option>
        <option data-v-cf47e900="" value="Gothic Rock"></option>
        <option data-v-cf47e900="" value="Progressive Rock"></option>
        <option data-v-cf47e900="" value="Psychedelic Rock"></option>
        <option data-v-cf47e900="" value="Symphonic Rock"></option>
        <option data-v-cf47e900="" value="Slow Rock"></option>
        <option data-v-cf47e900="" value="Big Band"></option>
        <option data-v-cf47e900="" value="Chorus"></option>
        <option data-v-cf47e900="" value="Easy Listening"></option>
        <option data-v-cf47e900="" value="Acoustic"></option>
        <option data-v-cf47e900="" value="Humour"></option>
        <option data-v-cf47e900="" value="Speech"></option>
        <option data-v-cf47e900="" value="Chanson"></option>
        <option data-v-cf47e900="" value="Opera"></option>
        <option data-v-cf47e900="" value="Chamber Music"></option>
        <option data-v-cf47e900="" value="Sonata"></option>
        <option data-v-cf47e900="" value="Symphony"></option>
        <option data-v-cf47e900="" value="Booty Bass"></option>
        <option data-v-cf47e900="" value="Primus"></option>
        <option data-v-cf47e900="" value="Porn Groove"></option>
        <option data-v-cf47e900="" value="Satire"></option>
        <option data-v-cf47e900="" value="Slow Jam"></option>
        <option data-v-cf47e900="" value="Club"></option>
        <option data-v-cf47e900="" value="Tango"></option>
        <option data-v-cf47e900="" value="Samba"></option>
        <option data-v-cf47e900="" value="Folklore"></option>
        <option data-v-cf47e900="" value="Ballad"></option>
        <option data-v-cf47e900="" value="Power Ballad"></option>
        <option data-v-cf47e900="" value="Rhythmic Soul"></option>
        <option data-v-cf47e900="" value="Freestyle"></option>
        <option data-v-cf47e900="" value="Duet"></option>
        <option data-v-cf47e900="" value="Punk Rock"></option>
        <option data-v-cf47e900="" value="Drum Solo"></option>
        <option data-v-cf47e900="" value="A cappella"></option>
        <option data-v-cf47e900="" value="Euro-House"></option>
        <option data-v-cf47e900="" value="Dance Hall"></option>
        <option data-v-cf47e900="" value="Goa"></option>
        <option data-v-cf47e900="" value="Drum &amp; Bass"></option>
        <option data-v-cf47e900="" value="Club-House"></option>
        <option data-v-cf47e900="" value="Hardcore Techno"></option>
        <option data-v-cf47e900="" value="Terror"></option>
        <option data-v-cf47e900="" value="Indie"></option>
        <option data-v-cf47e900="" value="BritPop"></option>
        <option data-v-cf47e900="" value="Negerpunk"></option>
        <option data-v-cf47e900="" value="Polsk Punk"></option>
        <option data-v-cf47e900="" value="Beat"></option>
        <option data-v-cf47e900="" value="Christian Gangsta Rap"></option>
        <option data-v-cf47e900="" value="Heavy Metal"></option>
        <option data-v-cf47e900="" value="Black Metal"></option>
        <option data-v-cf47e900="" value="Crossover"></option>
        <option data-v-cf47e900="" value="Contemporary Christian"></option>
        <option data-v-cf47e900="" value="Christian Rock"></option>
        <option data-v-cf47e900="" value="Merengue"></option>
        <option data-v-cf47e900="" value="Salsa"></option>
        <option data-v-cf47e900="" value="Thrash Metal"></option>
        <option data-v-cf47e900="" value="Anime"></option>
        <option data-v-cf47e900="" value="JPop"></option>
        <option data-v-cf47e900="" value="SynthPop"></option>
        <option data-v-cf47e900="" value="Abstract"></option>
        <option data-v-cf47e900="" value="Art Rock"></option>
        <option data-v-cf47e900="" value="Baroque"></option>
        <option data-v-cf47e900="" value="Bhangra"></option>
        <option data-v-cf47e900="" value="Big beat"></option>
        <option data-v-cf47e900="" value="Breakbeat"></option>
        <option data-v-cf47e900="" value="Chillout"></option>
        <option data-v-cf47e900="" value="Downtempo"></option>
        <option data-v-cf47e900="" value="Dub"></option>
        <option data-v-cf47e900="" value="EBM"></option>
        <option data-v-cf47e900="" value="Eclectic"></option>
        <option data-v-cf47e900="" value="Electro"></option>
        <option data-v-cf47e900="" value="Electroclash"></option>
        <option data-v-cf47e900="" value="Emo"></option>
        <option data-v-cf47e900="" value="Experimental"></option>
        <option data-v-cf47e900="" value="Garage"></option>
        <option data-v-cf47e900="" value="Global"></option>
        <option data-v-cf47e900="" value="IDM"></option>
        <option data-v-cf47e900="" value="Illbient"></option>
        <option data-v-cf47e900="" value="Industro-Goth"></option>
        <option data-v-cf47e900="" value="Jam Band"></option>
        <option data-v-cf47e900="" value="Krautrock"></option>
        <option data-v-cf47e900="" value="Leftfield"></option>
        <option data-v-cf47e900="" value="Lounge"></option>
        <option data-v-cf47e900="" value="Math Rock"></option>
        <option data-v-cf47e900="" value="New Romantic"></option>
        <option data-v-cf47e900="" value="Nu-Breakz"></option>
        <option data-v-cf47e900="" value="Post-Punk"></option>
        <option data-v-cf47e900="" value="Post-Rock"></option>
        <option data-v-cf47e900="" value="Psytrance"></option>
        <option data-v-cf47e900="" value="Shoegaze"></option>
        <option data-v-cf47e900="" value="Space Rock"></option>
        <option data-v-cf47e900="" value="Trop Rock"></option>
        <option data-v-cf47e900="" value="World Music"></option>
        <option data-v-cf47e900="" value="Neoclassical"></option>
        <option data-v-cf47e900="" value="Audiobook"></option>
        <option data-v-cf47e900="" value="Audio Theatre"></option>
        <option data-v-cf47e900="" value="Neue Deutsche Welle"></option>
        <option data-v-cf47e900="" value="Podcast"></option>
        <option data-v-cf47e900="" value="Indie-Rock"></option>
        <option data-v-cf47e900="" value="G-Funk"></option>
        <option data-v-cf47e900="" value="Dubstep"></option>
        <option data-v-cf47e900="" value="Garage Rock"></option>
        <option data-v-cf47e900="" value="Psybient"></option>
      </datalist>
    </div><label data-v-4c8780fc="" data-v-cf47e900="" class="filled multiline m3-text-field" style="display: none;"><span data-v-4c8780fc="" class="field"><!--v-if--><textarea data-v-4c8780fc="" aria-label="Lyrics" data-testid="lyrics-input" name="lyrics" placeholder=" " rows="14" class="m3-body-large"></textarea><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Lyrics</span></legend>
      </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Lyrics</span></span>
      <!--v-if-->
    </label>
  </main>
  <footer data-v-cf47e900=""><button data-v-bc641a16="" data-v-cf47e900="" type="button" class="text s m3-button m3-state m3-label-large btn-cancel">
      <!--v-if--><span data-v-bc641a16="" class="label">Cancel</span>
    </button><button data-v-bc641a16="" data-v-cf47e900="" type="submit" class="filled s m3-button m3-state m3-label-large">
      <!--v-if--><span data-v-bc641a16="" class="label">Save</span>
    </button></footer>
</form>
`;

exports[`editSongForm.vue > edits multiple songs 1`] = `
<form data-v-cf47e900="" class="form">
  <header data-v-cf47e900="" class="gap-4"><img data-v-cf47e900="" src="/assets/img/covers/default.svg" alt="" class="w-[84px] aspect-square object-cover object-center rounded-md">
    <div data-v-cf47e900="" class="flex-1 flex flex-col justify-center overflow-hidden">
      <h1 data-v-cf47e900="" class="mixed">3 songs selected</h1>
      <h2 data-v-cf47e900="" class="mixed" data-testid="displayed-artist-name">Various artists</h2>
      <h2 data-v-cf47e900="" class="mixed" data-testid="displayed-album-name">Various albums</h2>
    </div>
  </header>
  <!--v-if-->
  <main data-v-cf47e900="" class="pt-4">
    <div data-v-cf47e900="" class="flex flex-col gap-4">
      <!--v-if-->
      <div data-v-cf47e900="" class="grid md:grid-cols-2 gap-4"><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Artist" data-testid="artist-input" name="artist" placeholder="Leave unchanged" type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Artist</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Artist</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Album artist" data-testid="albumArtist-input" name="album_artist" placeholder="Leave unchanged" type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Album artist</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Album artist</span></span>
          <!--v-if-->
        </label></div><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Album" data-testid="album-input" name="album" placeholder="Leave unchanged" type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Album</span></legend>
        </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Album</span></span>
        <!--v-if-->
      </label>
      <div data-v-cf47e900="" class="grid grid-cols-2 md:grid-cols-4 gap-4"><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Track" data-testid="track-input" min="1" name="track" placeholder="Leave unchanged" type="number" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Track</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Track</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Disc" data-testid="disc-input" min="1" name="disc" placeholder="Leave unchanged" type="number" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Disc</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Disc</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Genre" data-testid="genre-input" list="genres" name="genre" placeholder="Leave unchanged" type="text" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Genre</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Genre</span></span>
          <!--v-if-->
        </label><label data-v-4c8780fc="" data-v-cf47e900="" class="filled m3-text-field"><span data-v-4c8780fc="" class="field"><!--v-if--><input data-v-4c8780fc="" aria-label="Year" data-testid="year-input" name="year" placeholder="Leave unchanged" type="number" class="m3-body-large"><!--v-if--><fieldset data-v-4c8780fc="" aria-hidden="true"><legend data-v-4c8780fc="" class="m3-body-small"><span data-v-4c8780fc="">Year</span></legend>
          </fieldset><span data-v-4c8780fc="" class="label m3-body-large">Year</span></span>
          <!--v-if-->
        </label></div><datalist data-v-cf47e900="" id="genres">
        <option data-v-cf47e900="" value="Blues"></option>
        <option data-v-cf47e900="" value="Classic Rock"></option>
        <option data-v-cf47e900="" value="Country"></option>
        <option data-v-cf47e900="" value="Dance"></option>
        <option data-v-cf47e900="" value="Disco"></option>
        <option data-v-cf47e900="" value="Funk"></option>
        <option data-v-cf47e900="" value="Grunge"></option>
        <option data-v-cf47e900="" value="Hip-Hop"></option>
        <option data-v-cf47e900="" value="Jazz"></option>
        <option data-v-cf47e900="" value="Metal"></option>
        <option data-v-cf47e900="" value="New Age"></option>
        <option data-v-cf47e900="" value="Oldies"></option>
        <option data-v-cf47e900="" value="Other"></option>
        <option data-v-cf47e900="" value="Pop"></option>
        <option data-v-cf47e900="" value="R&amp;B"></option>
        <option data-v-cf47e900="" value="Rap"></option>
        <option data-v-cf47e900="" value="Reggae"></option>
        <option data-v-cf47e900="" value="Rock"></option>
        <option data-v-cf47e900="" value="Techno"></option>
        <option data-v-cf47e900="" value="Industrial"></option>
        <option data-v-cf47e900="" value="Alternative"></option>
        <option data-v-cf47e900="" value="Ska"></option>
        <option data-v-cf47e900="" value="Death Metal"></option>
        <option data-v-cf47e900="" value="Pranks"></option>
        <option data-v-cf47e900="" value="Soundtrack"></option>
        <option data-v-cf47e900="" value="Euro-Techno"></option>
        <option data-v-cf47e900="" value="Ambient"></option>
        <option data-v-cf47e900="" value="Trip-Hop"></option>
        <option data-v-cf47e900="" value="Vocal"></option>
        <option data-v-cf47e900="" value="Jazz &amp; Funk"></option>
        <option data-v-cf47e900="" value="Fusion"></option>
        <option data-v-cf47e900="" value="Trance"></option>
        <option data-v-cf47e900="" value="Classical"></option>
        <option data-v-cf47e900="" value="Instrumental"></option>
        <option data-v-cf47e900="" value="Acid"></option>
        <option data-v-cf47e900="" value="House"></option>
        <option data-v-cf47e900="" value="Game"></option>
        <option data-v-cf47e900="" value="Sound Clip"></option>
        <option data-v-cf47e900="" value="Gospel"></option>
        <option data-v-cf47e900="" value="Noise"></option>
        <option data-v-cf47e900="" value="Alternative Rock"></option>
        <option data-v-cf47e900="" value="Bass"></option>
        <option data-v-cf47e900="" value="Punk"></option>
        <option data-v-cf47e900="" value="Space"></option>
        <option data-v-cf47e900="" value="Meditative"></option>
        <option data-v-cf47e900="" value="Instrumental Pop"></option>
        <option data-v-cf47e900="" value="Instrumental Rock"></option>
        <option data-v-cf47e900="" value="Ethnic"></option>
        <option data-v-cf47e900="" value="Gothic"></option>
        <option data-v-cf47e900="" value="Darkwave"></option>
        <option data-v-cf47e900="" value="Techno-Industrial"></option>
        <option data-v-cf47e900="" value="Electronic"></option>
        <option data-v-cf47e900="" value="Pop-Folk"></option>
        <option data-v-cf47e900="" value="Eurodance"></option>
        <option data-v-cf47e900="" value="Dream"></option>
        <option data-v-cf47e900="" value="Southern Rock"></option>
        <option data-v-cf47e900="" value="Comedy"></option>
        <option data-v-cf47e900="" value="Cult"></option>
        <option data-v-cf47e900="" value="Gangsta"></option>
        <option data-v-cf47e900="" value="Top 40"></option>
        <option data-v-cf47e900="" value="Christian Rap"></option>
        <option data-v-cf47e900="" value="Pop/Funk"></option>
        <option data-v-cf47e900="" value="Jungle"></option>
        <option data-v-cf47e900="" value="Native US"></option>
        <option data-v-cf47e900="" value="Cabaret"></option>
        <option data-v-cf47e900="" value="New Wave"></option>
        <option data-v-cf47e900="" value="Psychedelic"></option>
        <option data-v-cf47e900="" value="Rave"></option>
        <option data-v-cf47e900="" value="Showtunes"></option>
        <option data-v-cf47e900="" value="Trailer"></option>
        <option data-v-cf47e900="" value="Lo-Fi"></option>
        <option data-v-cf47e900="" value="Tribal"></option>
        <option data-v-cf47e900="" value="Acid Punk"></option>
        <option data-v-cf47e900="" value="Acid Jazz"></option>
        <option data-v-cf47e900="" value="Polka"></option>
        <option data-v-cf47e900="" value="Retro"></option>
        <option data-v-cf47e900="" value="Musical"></option>
        <option data-v-cf47e900="" value="Rock &amp; Roll"></option>
        <option data-v-cf47e900="" value="Hard Rock"></option>
        <option data-v-cf47e900="" value="Folk"></option>
        <option data-v-cf47e900="" value="Folk-Rock"></option>
        <option data-v-cf47e900="" value="National Folk"></option>
        <option data-v-cf47e900="" value="Swing"></option>
        <option data-v-cf47e900="" value="Fast Fusion"></option>
        <option data-v-cf47e900="" value="Bebob"></option>
        <option data-v-cf47e900="" value="Latin"></option>
        <option data-v-cf47e900="" value="Revival"></option>
        <option data-v-cf47e900="" value="Celtic"></option>
        <option data-v-cf47e900="" value="Bluegrass"></option>
        <option data-v-cf47e900="" value="Avantgarde"></option>
        <option data-v-cf47e900="" value="Gothic Rock"></option>
        <option data-v-cf47e900="" value="Progressive Rock"></option>
        <option data-v-cf47e900="" value="Psychedelic Rock"></option>
        <option data-v-cf47e900="" value="Symphonic Rock"></option>
        <option data-v-cf47e900="" value="Slow Rock"></option>
        <option data-v-cf47e900="" value="Big Band"></option>
        <option data-v-cf47e900="" value="Chorus"></option>
        <option data-v-cf47e900="" value="Easy Listening"></option>
        <option data-v-cf47e900="" value="Acoustic"></option>
        <option data-v-cf47e900="" value="Humour"></option>
        <option data-v-cf47e900="" value="Speech"></option>
        <option data-v-cf47e900="" value="Chanson"></option>
        <option data-v-cf47e900="" value="Opera"></option>
        <option data-v-cf47e900="" value="Chamber Music"></option>
        <option data-v-cf47e900="" value="Sonata"></option>
        <option data-v-cf47e900="" value="Symphony"></option>
        <option data-v-cf47e900="" value="Booty Bass"></option>
        <option data-v-cf47e900="" value="Primus"></option>
        <option data-v-cf47e900="" value="Porn Groove"></option>
        <option data-v-cf47e900="" value="Satire"></option>
        <option data-v-cf47e900="" value="Slow Jam"></option>
        <option data-v-cf47e900="" value="Club"></option>
        <option data-v-cf47e900="" value="Tango"></option>
        <option data-v-cf47e900="" value="Samba"></option>
        <option data-v-cf47e900="" value="Folklore"></option>
        <option data-v-cf47e900="" value="Ballad"></option>
        <option data-v-cf47e900="" value="Power Ballad"></option>
        <option data-v-cf47e900="" value="Rhythmic Soul"></option>
        <option data-v-cf47e900="" value="Freestyle"></option>
        <option data-v-cf47e900="" value="Duet"></option>
        <option data-v-cf47e900="" value="Punk Rock"></option>
        <option data-v-cf47e900="" value="Drum Solo"></option>
        <option data-v-cf47e900="" value="A cappella"></option>
        <option data-v-cf47e900="" value="Euro-House"></option>
        <option data-v-cf47e900="" value="Dance Hall"></option>
        <option data-v-cf47e900="" value="Goa"></option>
        <option data-v-cf47e900="" value="Drum &amp; Bass"></option>
        <option data-v-cf47e900="" value="Club-House"></option>
        <option data-v-cf47e900="" value="Hardcore Techno"></option>
        <option data-v-cf47e900="" value="Terror"></option>
        <option data-v-cf47e900="" value="Indie"></option>
        <option data-v-cf47e900="" value="BritPop"></option>
        <option data-v-cf47e900="" value="Negerpunk"></option>
        <option data-v-cf47e900="" value="Polsk Punk"></option>
        <option data-v-cf47e900="" value="Beat"></option>
        <option data-v-cf47e900="" value="Christian Gangsta Rap"></option>
        <option data-v-cf47e900="" value="Heavy Metal"></option>
        <option data-v-cf47e900="" value="Black Metal"></option>
        <option data-v-cf47e900="" value="Crossover"></option>
        <option data-v-cf47e900="" value="Contemporary Christian"></option>
        <option data-v-cf47e900="" value="Christian Rock"></option>
        <option data-v-cf47e900="" value="Merengue"></option>
        <option data-v-cf47e900="" value="Salsa"></option>
        <option data-v-cf47e900="" value="Thrash Metal"></option>
        <option data-v-cf47e900="" value="Anime"></option>
        <option data-v-cf47e900="" value="JPop"></option>
        <option data-v-cf47e900="" value="SynthPop"></option>
        <option data-v-cf47e900="" value="Abstract"></option>
        <option data-v-cf47e900="" value="Art Rock"></option>
        <option data-v-cf47e900="" value="Baroque"></option>
        <option data-v-cf47e900="" value="Bhangra"></option>
        <option data-v-cf47e900="" value="Big beat"></option>
        <option data-v-cf47e900="" value="Breakbeat"></option>
        <option data-v-cf47e900="" value="Chillout"></option>
        <option data-v-cf47e900="" value="Downtempo"></option>
        <option data-v-cf47e900="" value="Dub"></option>
        <option data-v-cf47e900="" value="EBM"></option>
        <option data-v-cf47e900="" value="Eclectic"></option>
        <option data-v-cf47e900="" value="Electro"></option>
        <option data-v-cf47e900="" value="Electroclash"></option>
        <option data-v-cf47e900="" value="Emo"></option>
        <option data-v-cf47e900="" value="Experimental"></option>
        <option data-v-cf47e900="" value="Garage"></option>
        <option data-v-cf47e900="" value="Global"></option>
        <option data-v-cf47e900="" value="IDM"></option>
        <option data-v-cf47e900="" value="Illbient"></option>
        <option data-v-cf47e900="" value="Industro-Goth"></option>
        <option data-v-cf47e900="" value="Jam Band"></option>
        <option data-v-cf47e900="" value="Krautrock"></option>
        <option data-v-cf47e900="" value="Leftfield"></option>
        <option data-v-cf47e900="" value="Lounge"></option>
        <option data-v-cf47e900="" value="Math Rock"></option>
        <option data-v-cf47e900="" value="New Romantic"></option>
        <option data-v-cf47e900="" value="Nu-Breakz"></option>
        <option data-v-cf47e900="" value="Post-Punk"></option>
        <option data-v-cf47e900="" value="Post-Rock"></option>
        <option data-v-cf47e900="" value="Psytrance"></option>
        <option data-v-cf47e900="" value="Shoegaze"></option>
        <option data-v-cf47e900="" value="Space Rock"></option>
        <option data-v-cf47e900="" value="Trop Rock"></option>
        <option data-v-cf47e900="" value="World Music"></option>
        <option data-v-cf47e900="" value="Neoclassical"></option>
        <option data-v-cf47e900="" value="Audiobook"></option>
        <option data-v-cf47e900="" value="Audio Theatre"></option>
        <option data-v-cf47e900="" value="Neue Deutsche Welle"></option>
        <option data-v-cf47e900="" value="Podcast"></option>
        <option data-v-cf47e900="" value="Indie-Rock"></option>
        <option data-v-cf47e900="" value="G-Funk"></option>
        <option data-v-cf47e900="" value="Dubstep"></option>
        <option data-v-cf47e900="" value="Garage Rock"></option>
        <option data-v-cf47e900="" value="Psybient"></option>
      </datalist>
    </div>
    <!--v-if-->
  </main>
  <footer data-v-cf47e900=""><button data-v-bc641a16="" data-v-cf47e900="" type="button" class="text s m3-button m3-state m3-label-large btn-cancel">
      <!--v-if--><span data-v-bc641a16="" class="label">Cancel</span>
    </button><button data-v-bc641a16="" data-v-cf47e900="" type="submit" class="filled s m3-button m3-state m3-label-large">
      <!--v-if--><span data-v-bc641a16="" class="label">Save</span>
    </button></footer>
</form>
`;
